--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "msal": "^1.2.2",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
+    "uuid": "^7.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.21",
