--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.0.0-beta.0",
     "@mdi/font": "^5.0.45",
     "core-js": "^3.6.5",
     "msal": "^1.2.2",
