--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 node_modules
-# /dist
+/dist
+/build
+/config
 
 # local env files
 .env.local
@@ -19,5 +21,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-
-/build/
