--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scheduler",
-  "version": "0.1.0",
+  "name": "schedule-maid",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,60 +8,41 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@azure/msal-browser": "^2.0.0-beta.0",
-    "@mdi/font": "^5.0.45",
-    "core-js": "^3.6.5",
-    "msal": "^1.2.2",
-    "register-service-worker": "^1.7.1",
-    "roboto-fontface": "*",
-    "uuid": "^7.0.3",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
-    "vuetify": "^2.2.21",
-    "vuex": "^3.1.3"
+    "@azure/msal-browser": "^2.11.1",
+    "@mdi/font": "^5.9.55",
+    "core-js": "^3.8.3",
+    "msal": "^1.4.6",
+    "register-service-worker": "^1.7.2",
+    "uuid": "^8.3.2",
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.1",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "babel-eslint": "^10.1.0",
-    "config": "^3.3.1",
-    "eslint": "^6.8.0",
+    "@vue/eslint-config-standard": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
-    "fibers": "^4.0.2",
-    "node-sass": "^4.13.1",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.5",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.6.0",
+    "fibers": "^5.0.0",
+    "sass": "^1.32.7",
+    "sass-loader": "^10.0.0",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-vuetify": "^2.1.0",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/standard"
-    ],
-    "rules": {
-      "space-before-function-paren": 0
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "vuetify-loader": "^1.7.2"
+  }
 }
